--- a/AdvertiserCampaigns.html
+++ b/AdvertiserCampaigns.html
@@ -543,21 +543,16 @@
       <div class="mb-4">
         <h3 class="text-lg font-semibold text-gray-800 mb-3">Beacon Fields</h3>
         <div class="bg-blue-50 border border-blue-200 rounded-lg p-4">
-          <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
+          <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
             <div>
-              <label class="block text-sm font-medium text-gray-700 mb-1">Campaign Name *</label>
+              <label class="block text-sm font-medium text-gray-700 mb-1">ID</label>
+              <input type="text" id="beaconCampaignId" class="w-full border border-gray-300 rounded-md px-3 py-2 bg-gray-100 cursor-not-allowed focus:outline-none" readonly>
+              <p class="text-xs text-gray-500 mt-1">Auto-generated campaign identifier</p>
+            </div>
+            <div>
+              <label class="block text-sm font-medium text-gray-700 mb-1">Name *</label>
               <input type="text" id="beaconCampaignName" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
               <p class="text-xs text-gray-500 mt-1">Common identifier across all platforms</p>
-            </div>
-            <div>
-              <label class="block text-sm font-medium text-gray-700 mb-1">Media Type</label>
-              <input type="text" id="beaconMediaType" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
-              <p class="text-xs text-gray-500 mt-1">Type of media (Display, Video, etc.)</p>
-            </div>
-            <div>
-              <label class="block text-sm font-medium text-gray-700 mb-1">Domain URL</label>
-              <input type="text" id="beaconDomainUrl" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
-              <p class="text-xs text-gray-500 mt-1">Target landing page domain</p>
             </div>
           </div>
         </div>
@@ -717,7 +712,7 @@
                 <label class="block text-sm font-medium text-gray-700 mb-1">Campaign Name</label>
                 <select id="adServerCampaignName" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500" required>
                   <option value="">-- Select Campaign Name --</option>
-                  <option value="Brandawareness">Brandawareness</option>
+                  <option value="Brandawareness">Brand Awareness</option>
                   <option value="Persona">Persona</option>
                   <option value="Targeting">Targeting</option>
                 </select>
@@ -1723,7 +1718,7 @@ tr.draggable = true;
 tr.dataset.campaignId = c.id;
 tr.dataset.groupId = r.groupId || 'ungrouped';
 tr.innerHTML = `
-  <td class="px-6 py-1 whitespace-nowrap text-sm border-r border-default">${c.id || ''}</td>
+  <td class="px-6 py-1 whitespace-nowrap text-sm border-r border-default">${c.beaconCampaignId || c.id || ''}</td>
   <td class="px-6 py-1 whitespace-nowrap text-sm font-medium border-r border-default">
     <a href="./CampaignDetails.html?campaignId=${encodeURIComponent(c.id)}&campaignName=${encodeURIComponent(c.beaconCampaignName || c.name)}" class="text-blue-600 hover:underline">
       ${c.beaconCampaignName || c.name || ''}
@@ -1932,6 +1927,12 @@ document.addEventListener('DOMContentLoaded', () => {
         const form = document.getElementById('createCampaignForm');
         if (form) form.reset();
         
+        // Generate and display Campaign ID
+        const campaignIdField = document.getElementById('beaconCampaignId');
+        if (campaignIdField) {
+          campaignIdField.value = 'CAM-' + Math.random().toString(36).substr(2, 6).toUpperCase();
+        }
+        
         // Reset connectors
         const connectorsContent = document.getElementById('connectorsContent');
         if (connectorsContent) connectorsContent.classList.add('hidden');
@@ -2081,9 +2082,8 @@ function handleCampaignCreation(redirectToAdGroups) {
     adServer: adServerDisplay, // Only contains Ad Server selections
     adGroups: 0, // Initialize with 0 - will be updated dynamically by live count
     // Beacon Fields mapped to Common Data
+    beaconCampaignId: document.getElementById('beaconCampaignId')?.value || '',
     beaconCampaignName: document.getElementById('beaconCampaignName')?.value || '',
-    beaconMediaType: document.getElementById('beaconMediaType')?.value || '',
-    beaconDomainUrl: document.getElementById('beaconDomainUrl')?.value || '',
     // New Ad Server fields
     adServerCampaignName: document.getElementById('adServerCampaignName')?.value || '',
     adServerSchedule: document.getElementById('adServerSchedule')?.value || '',
@@ -2136,9 +2136,8 @@ function handleCampaignCreation(redirectToAdGroups) {
       geoTargeting: campaign.geoTargeting,
       deviceTargeting: campaign.deviceTargeting,
       // Beacon fields
+      beaconCampaignId: campaign.beaconCampaignId,
       beaconCampaignName: campaign.beaconCampaignName,
-      beaconMediaType: campaign.beaconMediaType,
-      beaconDomainUrl: campaign.beaconDomainUrl,
       // Ad Server fields in audit
       adServerCampaignName: campaign.adServerCampaignName,
       adServerSchedule: campaign.adServerSchedule,
