--- a/CAD.html
+++ b/CAD.html
@@ -187,7 +187,7 @@
       <a href="./WFAdvertiserDetails.html" data-nav-link
          class="flex items-center px-1 py-2 text-sm text-gray-700 hover:bg-blue-50 rounded-md">
         <img src="./assets/svgs/Details.svg" alt="Details" class="w-6 h-6 mr-2" />
-        <span data-link-label>Details</span>
+        <span data-link-label>Overview</span>
       </a>
     </li>
     <li>
