Breadcrumb navigation bar

--- a/AdvertiserAdGroup.html
+++ b/AdvertiserAdGroup.html
@@ -208,6 +208,21 @@
       </div>
     </header>
 
+    <!-- Breadcrumb Bar -->
+    <div class="bg-white border-b border-gray-200 px-6 py-2">
+      <nav class="flex items-center text-sm text-gray-600">
+        <a href="./index.html" class="hover:text-blue-600 transition-colors">Advertisers</a>
+        <svg class="w-4 h-4 mx-2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+        </svg>
+        <a href="#" id="breadcrumbAdvertiser" class="hover:text-blue-600 transition-colors">—</a>
+        <svg class="w-4 h-4 mx-2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+        </svg>
+        <span class="font-semibold text-gray-900">Ad Groups</span>
+      </nav>
+    </div>
+
     <!-- Body -->
     <div class="flex flex-1 overflow-hidden">
       <!-- Sidebar -->
@@ -278,19 +293,6 @@
 
       <!-- Main Content -->
       <main class="flex-1 overflow-y-auto p-6">
-        <!-- Breadcrumb Navigation -->
-        <nav class="mb-4 flex items-center text-sm text-gray-600">
-          <a href="./index.html" class="hover:text-blue-600 transition-colors">Advertisers</a>
-          <svg class="w-4 h-4 mx-2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
-          </svg>
-          <a href="#" id="breadcrumbAdvertiser" class="hover:text-blue-600 transition-colors">—</a>
-          <svg class="w-4 h-4 mx-2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
-          </svg>
-          <span class="font-semibold text-gray-900">Ad Groups</span>
-        </nav>
-
         <div class="app-card rounded-lg shadow-lg overflow-hidden">
           <!-- Advertiser Header -->
           <div class="px-4 pt-4">
